fix text wrap

--- a/app/sass/_home.scss
+++ b/app/sass/_home.scss
@@ -50,7 +50,7 @@
       height: 400px;
       text-align: center;
       font-family: Zorus_Serif_Italic;
-      text-transform: uppercase;
+			text-transform: uppercase;
 
       h1 {
         background: url("../pictures/mask.jpg");
@@ -63,7 +63,8 @@
         font-size: 210px;
         font-weight: normal;
         letter-spacing: 9px;
-        line-height: 204px;
+				line-height: 204px;
+				padding-right: 20px;
 
         @media only screen and (max-width: 640px) {
           font-size: 80px;
@@ -75,7 +76,7 @@
       .shadow {
         position: relative;
         top: -398px;
-        left: 22px;
+        left: 13px;
         width: 434px;
 
         // Firefox exception
